 * Fix: Previewing inaccessible pages no longer fails with `ALLOWED_HOSTS = ['*']` (Robert Rollins)
 * Fix: The submit button 'spinner' no longer activates if the form has client-side validation errors (Jack Paine, Matt Westcott)
 * Fix: Overriding `MESSAGE_TAGS` in project settings no longer causes messages in the Wagtail admin to lose their styling (Tim Heap)


1.4.3 (04.04.2016)
~~~~~~~~~~~~~~~~~~

 * Fixed regression introduced in 1.4.2 which caused Wagtail to query the database during a system check (Tim Heap)


1.4.2 (31.03.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Streamfields no longer break on validation error
 * Fix: Number of validation errors in each tab in the editor is now correctly reported again
 * Fix: Userbar now opens on devices with both touch and mouse (Josh Barr)
 * Fix: `wagtail.wagtailadmin.wagtail_hooks` no longer calls `static` during app load, so you can use `ManifestStaticFilesStorage` without calling the `collectstatic` command
 * Fix: Fixed crash on page save when a custom `Page` edit handler has been specified using the `edit_handler` attribute (Tim Heap)


1.4.1 (17.03.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Fixed erroneous rendering of up arrow icons (Rob Moorman)


1.4 (16.03.2016)
~~~~~~~~~~~~~~~~

 * Added support for viewing previous revisions of pages, and previewing or rolling back to earlier versions
 * Introduced collections, for image / document organisation
 * The Wagtail userbar on the frontend has been redesigned, and no longer depends on an iframe (Thomas Winter, Gareth Price).
 * The page editor now produces a warning if the user navigates away without saving changes
 * 'Add document' interface now supports uploading multiple documents at once
 * The `Document` model can now be overridden using the new `WAGTAILDOCS_DOCUMENT_MODEL` setting (Alex Gleason)
 * Wagtail no longer depends on django-compressor
 * The page search interface now searches all fields instead of just the title (Kait Crawford)