@@ -22,3 +22,4 @@ Bug fixes
  * Previewing inaccessible pages no longer fails with ``ALLOWED_HOSTS = ['*']`` (Robert Rollins)
  * The submit button 'spinner' no longer activates if the form has client-side validation errors (Jack Paine, Matt Westcott)
  * Overriding ``MESSAGE_TAGS`` in project settings no longer causes messages in the Wagtail admin to lose their styling (Tim Heap)
+ * Border added around explorer menu to stop it blending in with StreamField block listing; also fixes invisible explorer menu in Firefox 46 (Alex Gleason)
